--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ body {
     animation: fadeInIntro 1s ease-in-out forwards; /* Apply fadeInIntro animation */
     animation-delay: 2s;                     /* Delay the animation by 2 seconds */  
     overflow: hidden;
+    justify-content: center;
 }
 
 
@@ -172,6 +173,7 @@ body {
     height: 100vh;
     color: #ffffff;
     padding: 20px;
+    justify-content: center;
 }
 
 .intro-container video {
@@ -227,11 +229,11 @@ body {
 .summary p {
     font-size: 20px;
     color: #cccbcb;
-    width: 900px;
     max-width: 90%;
     opacity: 0;
     animation: fadeInSlideUp 1.5s ease forwards;
     animation-delay: 3.5s;
+    text-align: center;
 }
 
 .explore-button {
@@ -464,7 +466,10 @@ body {
     margin-left: 180px;
 }
 
-
+.git:hover{
+    transform: scale(1.2);
+    transition: transforn 1s ease;
+}
 
 
 
