--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@ html {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
-    /* width: 100vh; */
-    overflow-x: hidden; /* Prevents horizontal scrolling */
+
+
     
 }
-
+@media only screen and (max-width:780px){
+    html{
+        /* width: 780px; */
+        /* display: flex;   */
+ 
+        height: 100%;   
+    }
+}
 
 body {
     cursor: url("/static/cursor.png"), auto;
@@ -44,7 +51,7 @@ body {
 
 }
 
-@media only screen and (max-width: 430px) {
+@media (max-width: 768px) {
     .navbar {
         left: 3% ;                            /* Maintain no margin */
     }
@@ -153,7 +160,7 @@ body {
 
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px)  {
     .resume {
         right: 3% ;                            /* Maintain no margin */
         height: 17px;
@@ -279,7 +286,7 @@ body {
 }
 
 /* Media queries for smaller screens */
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px)  {
     .intro {
         height: 100vh;          /* Maintain full height */
         padding: 0;             /* Remove padding for smaller screens */
@@ -303,7 +310,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px)  {
     .big-heading {
         font-size: 4em; /* Further adjust font size for very small screens */
     }
@@ -359,7 +366,7 @@ body {
 
 
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px)  {
    .skills{
     width: 100vh;
    }
@@ -531,7 +538,7 @@ body {
 }
 
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px) {
     .products{
      width: 100vh;
     }
@@ -631,7 +638,7 @@ body {
     padding: 10px; /* Padding when visible */
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px)  {
     .work-experience-section{
      width: 100vh;
     }
@@ -647,7 +654,6 @@ body {
     margin-top: 400px;
     background-color:#1f1e1e;
 
-    margin-right: 0px;
 }
 
 .certifications h2 {
@@ -666,6 +672,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 15px;
+
 }
 
 .certification-item {
@@ -685,7 +692,7 @@ body {
 
 
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px) {
     .certifications{
      width: 100vh;
     }
@@ -701,9 +708,10 @@ body {
     background-color: #000000;
     color: #fff;
     margin-top: 50px;
-    padding: 10px;
+    /* padding: 10px; */
 
     position: relative;
+
 
 
     
@@ -726,8 +734,9 @@ body {
 .slider {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    margin: 5px;
+    margin: 0px;
     overflow: scroll;
+    width: 100%;
 }
 
 .news-tile {
@@ -782,11 +791,25 @@ body {
 
 
 
-
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px) {
     .news-slider{
-     width: 100vh;
+        flex-direction: column;
+        /* Stack items on smaller screens */
+        align-items: center;
+        /* Center align items */
+        width: 100vh;
+     
+    
     }
+   .slider{
+    margin: 0px;
+    display: flex;
+    margin: 0px;
+    /* Center the container */
+    width: 100%;
+   }
+
+
  }
 
 
@@ -832,6 +855,7 @@ body {
     margin: 0px;
     /* Center the container */
     background-color: #1f1e1e;
+    width: 100%;
 
 }
 
@@ -949,12 +973,20 @@ body {
 
 
 /* Responsive Styles */
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 780px) {
     .contact-container {
         flex-direction: column;
         /* Stack items on smaller screens */
         align-items: center;
         /* Center align items */
         width: 100vh;
+    }
+    .contact-container {
+        display: flex;
+        margin: 0px;
+        /* Center the container */
+        background-color: #1f1e1e;
+        width: 100%;
+    
     }
 }
