--- a/style.css
+++ b/style.css
@@ -986,7 +986,7 @@ body {
         margin: 0px;
         /* Center the container */
         background-color: #1f1e1e;
-        width: 100%;
+        width: 100vh;
     
     }
 }
